# esp32-sensor-app

./: .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  dockerfile  main.py  models.py  requirements.txt  test_api.py
.MICROCONTROLLER.old/: config_api.cpp  config_api.h  config_sd.cpp  config_sd.h  config_wifi.h  logic_dht11.cpp  logic_dht11.h  logic_event_logger.h  time_sync.h
.MICROCONTROLLER.old/static/css/: style.css
.MICROCONTROLLER.old/static/js/: app.js
.web_bak/: index.html
.web_bak/css/: style.css
API-CRUD/: Cargo.toml  Dockerfile
API-CRUD/src/: main.rs
API-CRUD/web/: index.html
API-CRUD/web/css/: style.css
API-CRUD/web/js/: app.js
MICROCONTROLLER/: MICROCONTROLLER.ino  certs.h  config_api.cpp  config_api.h  config_sd.cpp  config_sd.h  config_wifi.cpp  config_wifi.h  logic_event_logger.cpp  secrets.h  time_sync.cpp
SERVER/: Cargo.toml  Dockerfile
SERVER/migrations/: 20250612150053_initial.sql
SERVER/src/: ctx.rs  error.rs  main.rs  model.rs
SERVER/src/web/: mod.rs  mw_auth.rs  routes_dht11_records.rs  routes_login.rs
SERVER/tests/: quick_dev.rs
SERVER/web/: Dockerfile  nginx.conf
Static/css/: style.css
Static/js/: app.js
app/: crud.py  database.py  main.py  models.py
controller/: controller.ino
data/: sensores.db
static/css/: style.css
templates/: acerca.html  datos.html  inicio.html  logs.html
