[package]
name = "sensor_log_api"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Angel Gonzalez <anggonpad@gmail.com>"]

[dependencies]
tokio = {version = "1", features = ["full"]}
# Serde and json dependencies
serde = {version = "1", features = ["derive"]}
serde_json = "1"
# Axum dep
axum = {version = "0.6", features = ["macros"]}
tower-http = {version = "0.4", features = ["fs"]}
tower-cookies = "0.9"

# Time related dep
chrono = {version = "0.4", features = ["serde"]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"