[package]
name = "sensor_log_api"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["Angel Gonzalez <anggonpad@gmail.com>"]

[dependencies]
tokio = {version = "1", features = ["full"]}

# Serde and json dependencies
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_with = "2"

# Axum dep
axum = {version = "0.6", features = ["macros"]}
tower-http = {version = "0.4", features = ["fs"]}
tower-cookies = "0.9"

# Time related dep
chrono = {version = "0.4", features = ["serde"]}

# Auth
lazy-regex = "2"
async-trait = "0.1"
strum_macros = "0.24"
uuid = {version = "1", features = ["v4", "fast-rng",]}

[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"